[package]
name = "procks"
edition = "2018"
version = "1.0.0"
license = "MIT License"
authors = ["Steven Ortiz"]

[lib]
doc = false

[[bin]]
name = "procks"
doc = false

[dependencies]
astd = { package = "async-std", version = "1.1.0" }
futures = "0.3.1"
structopt = { version = "0.3.5", default-features = false }
