[package]
name = "procks"
edition = "2021"
version = "1.0.0"
license = "MIT License"
authors = ["Steven Ortiz"]

[lib]
doc = false

[[bin]]
name = "procks"
doc = false

[dependencies]
astd = { package = "async-std", version = "1.11.0" }
futures = "0.3.21"
structopt = { version = "0.3.26", default-features = false }
