[package]
name = "procks"
edition = "2024"
version = "2.0.0"
license = "MIT License"
authors = ["Steven Ortiz"]

[lib]
doc = false

[[bin]]
name = "procks"
doc = false

[dependencies]
astd = { package = "async-std", version = "1.13.1" }
clap = { version = "4.5.32", features = ["derive"] }
futures = "0.3.31"
